# synthdid-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: california_prop99.ipynb  california_prop99.py
synthdid/: __init__.py  estimator.py  inference.py  model.py  panel.py  plot.py  results.py  solver.py  summary.py  validation.py
tests/: test_synthdid.py
